--- a/express/counter.html
+++ b/express/counter.html
@@ -94,8 +94,8 @@
       document.getElementById("_porcentaje").innerHTML = porcentaje + '%';
     }
 
-    document.getElementById("_entradas").innerHTML = data.entradas;
-    document.getElementById("_salidas").innerHTML = data.salidas;
+    //document.getElementById("_entradas").innerHTML = data.entradas;
+    //document.getElementById("_salidas").innerHTML = data.salidas;
   }
 
 </script>
